--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html,body{
   width: 100vw;
   /* height: 500px; */
   overflow: none;
+  /* background: white; */
 }
 
 canvas{
@@ -36,6 +37,8 @@ canvas{
   border-bottom: white 1px solid;
   position: fixed;
   width: 100%;
+  font-weight: 700;
+  font-size: 1rem;
 }
 
 .form{
@@ -43,7 +46,7 @@ canvas{
   flex-direction: column;
   padding: 2%;
   width: 100%;
-  height: 25%;
+  height: 20%;
   gap: 1%;
   position: fixed;
   bottom: 0;
@@ -57,6 +60,9 @@ canvas{
   align-self: center;
   padding: 1%;
   margin-bottom: 5px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .in1, .in2 {
@@ -69,6 +75,81 @@ canvas{
 } */
 .wxContainer{
   overflow-y: scroll;
-  padding: 0.5%;
+  padding: 2%;
 
+}
+
+.short{
+  border-bottom: 1px solid black;
+}
+
+
+
+@media screen and (min-width: 450px) {
+  .wxContainer{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .form{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .form button{
+    padding: 0.5%;
+    margin-top: 5px;
+  }
+
+  .in1,.in2{
+    padding: 1%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .wxContainer{
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+
+  .form{
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+
+  .form button{
+    padding: 0.5%;
+  }
+
+  .in1,.in2{
+    padding: 0.5%;
+  }
+
+  .header{
+    font-size: 1.5em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .wxContainer{
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+
+  .form{
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+
+  .form button{
+    padding: 0.5%;
+  }
+
+  .in1,.in2{
+    padding: 1%;
+  }
+
+  .header{
+    padding: 1%;
+  }
 }
