--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,24 @@
   margin: 0;
   padding: 0;
   /* color: white; */
+  /* overflow-x: clip; */
 }
 
 html,body{
-  width: 100vw;
+  width: 100%;
   /* height: 500px; */
   overflow: none;
   /* background: white; */
 }
+
+.wrapper{
+  position: absolute;
+}
+
+/* body{
+  overflow-y: scroll;
+  position: fixed;
+} */
 
 canvas{
   position: fixed;
@@ -83,8 +93,15 @@ canvas{
 
 }
 
+.textBox img {
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
 .short{
+  border-top: 1px solid black;
   border-bottom: 1px solid black;
+  width: 50%;
 }
 
 
@@ -140,6 +157,9 @@ canvas{
     padding-right: 20%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
   }
 
   .form{
@@ -158,4 +178,16 @@ canvas{
   .header{
     padding: 1%;
   }
+
+  .textBox{
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+
+  }
+
+
 }
