--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ html,body{
   position: absolute;
   /* left: 50%; */
   width: 100%;
-  top:0;
+  top: 0vh;
   display: flex;
 }
 
@@ -31,6 +31,12 @@ canvas{
   z-index: -50;
   display: block;
   /* background-color: #0c1445; */
+}
+
+.canvas2{
+  position: fixed;
+  left: 500%;
+  display: block;
 }
 
 .menuContainer{
